<resources>
    <string name="app_name">FirebaseFirestore</string>
    <string name="button_txt_write">Write</string>
    <string name="button_txt_read">Read</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_club">Club:</string>
    <string name="text_city">City:</string>
    <string name="text_country">Country:</string>
    <string name="button_text_add_club">Add new club</string>
    <string name="email_edit">E-mail</string>
    <string name="password_edit">Password</string>
    <string name="button_text_registration">Registration</string>
    <string name="button_text_signin">SignIn</string>
    <string name="button_logout_text">Logout</string>
    <string name="choose_logo_text_label">Choose logo:</string>
</resources>